server/src/parser/CMakeParser.js
// Generated from java-escape by ANTLR 4.11.1
// jshint ignore: start
import antlr4 from './antlr4/index.js';
import CMakeListener from './CMakeListener.js';


const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.PredictionContextCache();

export default class CMakeParser extends antlr4.Parser {

    static grammarFileName = "java-escape";
    static literalNames = [ null, "'if'", "'elseif'", "'else'", "'endif'", 
                            "'foreach'", "'endforeach'", "'while'", "'endwhile'", 
                            "'break'", "'continue'", "'function'", "'endfunction'", 
                            "'macro'", "'endmacro'", "'set'", null, null, 
                            null, null, null, null, null, null, null, null, 
                            "'('", "')'" ];
    static symbolicNames = [ null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             "ID", "BracketArgument", "QuotedArgument", 
                             "UnquotedArgument", "BracketComment", "LineComment", 
                             "IgnoreNLBetweenArgs", "IgnoreExtraNLBetweenCmds", 
                             "NL", "WS", "LParen", "RParen", "Escape" ];
    static ruleNames = [ "file", "command", "argument" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = CMakeParser.ruleNames;
        this.literalNames = CMakeParser.literalNames;
        this.symbolicNames = CMakeParser.symbolicNames;
    }

    get atn() {
        return atn;
    }



	file() {
	    let localctx = new FileContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, CMakeParser.RULE_file);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 11;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) == 0 && ((1 << _la) & 131070) !== 0)) {
	            this.state = 6;
	            this.command();
	            this.state = 7;
	            this.match(CMakeParser.NL);
	            this.state = 13;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 14;
	        this.match(CMakeParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	command() {
	    let localctx = new CommandContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, CMakeParser.RULE_command);
	    var _la = 0; // Token type
	    try {
	        this.state = 148;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 1:
	            localctx = new IfCmdContext(this, localctx);
	            this.enterOuterAlt(localctx, 1);
	            this.state = 16;
	            this.match(CMakeParser.T__0);
	            this.state = 17;
	            this.match(CMakeParser.LParen);
	            this.state = 21;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while((((_la) & ~0x1f) == 0 && ((1 << _la) & 68091904) !== 0)) {
	                this.state = 18;
	                this.argument();
	                this.state = 23;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 24;
	            this.match(CMakeParser.RParen);
	            break;
	        case 2:
	            localctx = new ElseIfCmdContext(this, localctx);
	            this.enterOuterAlt(localctx, 2);
	            this.state = 25;
	            this.match(CMakeParser.T__1);
	            this.state = 26;
	            this.match(CMakeParser.LParen);
	            this.state = 30;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while((((_la) & ~0x1f) == 0 && ((1 << _la) & 68091904) !== 0)) {
	                this.state = 27;
	                this.argument();
	                this.state = 32;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 33;
	            this.match(CMakeParser.RParen);
	            break;
	        case 3:
	            localctx = new ElseCmdContext(this, localctx);
	            this.enterOuterAlt(localctx, 3);
	            this.state = 34;
	            this.match(CMakeParser.T__2);
	            this.state = 35;
	            this.match(CMakeParser.LParen);
	            this.state = 39;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while((((_la) & ~0x1f) == 0 && ((1 << _la) & 68091904) !== 0)) {
	                this.state = 36;
	                this.argument();
	                this.state = 41;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 42;
	            this.match(CMakeParser.RParen);
	            break;
	        case 4:
	            localctx = new EndIfCmdContext(this, localctx);
	            this.enterOuterAlt(localctx, 4);
	            this.state = 43;
	            this.match(CMakeParser.T__3);
	            this.state = 44;
	            this.match(CMakeParser.LParen);
	            this.state = 48;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while((((_la) & ~0x1f) == 0 && ((1 << _la) & 68091904) !== 0)) {
	                this.state = 45;
	                this.argument();
	                this.state = 50;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 51;
	            this.match(CMakeParser.RParen);
	            break;
	        case 5:
	            localctx = new ForeachCmdContext(this, localctx);
	            this.enterOuterAlt(localctx, 5);
	            this.state = 52;
	            this.match(CMakeParser.T__4);
	            this.state = 53;
	            this.match(CMakeParser.LParen);
	            this.state = 55; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            do {
	                this.state = 54;
	                this.argument();
	                this.state = 57; 
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            } while((((_la) & ~0x1f) == 0 && ((1 << _la) & 68091904) !== 0));
	            this.state = 59;
	            this.match(CMakeParser.RParen);
	            break;
	        case 6:
	            localctx = new EndForeachCmdContext(this, localctx);
	            this.enterOuterAlt(localctx, 6);
	            this.state = 61;
	            this.match(CMakeParser.T__5);
	            this.state = 62;
	            this.match(CMakeParser.LParen);
	            this.state = 66;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while((((_la) & ~0x1f) == 0 && ((1 << _la) & 68091904) !== 0)) {
	                this.state = 63;
	                this.argument();
	                this.state = 68;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 69;
	            this.match(CMakeParser.RParen);
	            break;
	        case 7:
	            localctx = new WhileCmdContext(this, localctx);
	            this.enterOuterAlt(localctx, 7);
	            this.state = 70;
	            this.match(CMakeParser.T__6);
	            this.state = 71;
	            this.match(CMakeParser.LParen);
	            this.state = 73; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            do {
	                this.state = 72;
	                this.argument();
	                this.state = 75; 
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            } while((((_la) & ~0x1f) == 0 && ((1 << _la) & 68091904) !== 0));
	            this.state = 77;
	            this.match(CMakeParser.RParen);
	            break;
	        case 8:
	            localctx = new EndWhileCmdContext(this, localctx);
	            this.enterOuterAlt(localctx, 8);
	            this.state = 79;
	            this.match(CMakeParser.T__7);
	            this.state = 80;
	            this.match(CMakeParser.LParen);
	            this.state = 84;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while((((_la) & ~0x1f) == 0 && ((1 << _la) & 68091904) !== 0)) {
	                this.state = 81;
	                this.argument();
	                this.state = 86;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 87;
	            this.match(CMakeParser.RParen);
	            break;
	        case 9:
	            localctx = new BreakCmdContext(this, localctx);
	            this.enterOuterAlt(localctx, 9);
	            this.state = 88;
	            this.match(CMakeParser.T__8);
	            this.state = 89;
	            this.match(CMakeParser.LParen);
	            this.state = 90;
	            this.match(CMakeParser.RParen);
	            break;
	        case 10:
	            localctx = new ContinueCmdContext(this, localctx);
	            this.enterOuterAlt(localctx, 10);
	            this.state = 91;
	            this.match(CMakeParser.T__9);
	            this.state = 92;
	            this.match(CMakeParser.LParen);
	            this.state = 93;
	            this.match(CMakeParser.RParen);
	            break;
	        case 11:
	            localctx = new FunctionCmdContext(this, localctx);
	            this.enterOuterAlt(localctx, 11);
	            this.state = 94;
	            this.match(CMakeParser.T__10);
	            this.state = 95;
	            this.match(CMakeParser.LParen);
	            this.state = 97; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            do {
	                this.state = 96;
	                this.argument();
	                this.state = 99; 
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            } while((((_la) & ~0x1f) == 0 && ((1 << _la) & 68091904) !== 0));
	            this.state = 101;
	            this.match(CMakeParser.RParen);
	            break;
	        case 12:
	            localctx = new EndFunctionCmdContext(this, localctx);
	            this.enterOuterAlt(localctx, 12);
	            this.state = 103;
	            this.match(CMakeParser.T__11);
	            this.state = 104;
	            this.match(CMakeParser.LParen);
	            this.state = 108;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while((((_la) & ~0x1f) == 0 && ((1 << _la) & 68091904) !== 0)) {
	                this.state = 105;
	                this.argument();
	                this.state = 110;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 111;
	            this.match(CMakeParser.RParen);
	            break;
	        case 13:
	            localctx = new MacroCmdContext(this, localctx);
	            this.enterOuterAlt(localctx, 13);
	            this.state = 112;
	            this.match(CMakeParser.T__12);
	            this.state = 113;
	            this.match(CMakeParser.LParen);
	            this.state = 115; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            do {
	                this.state = 114;
	                this.argument();
	                this.state = 117; 
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            } while((((_la) & ~0x1f) == 0 && ((1 << _la) & 68091904) !== 0));
	            this.state = 119;
	            this.match(CMakeParser.RParen);
	            break;
	        case 14:
	            localctx = new EndMacroCmdContext(this, localctx);
	            this.enterOuterAlt(localctx, 14);
	            this.state = 121;
	            this.match(CMakeParser.T__13);
	            this.state = 122;
	            this.match(CMakeParser.LParen);
	            this.state = 126;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while((((_la) & ~0x1f) == 0 && ((1 << _la) & 68091904) !== 0)) {
	                this.state = 123;
	                this.argument();
	                this.state = 128;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 129;
	            this.match(CMakeParser.RParen);
	            break;
	        case 15:
	            localctx = new SetCmdContext(this, localctx);
	            this.enterOuterAlt(localctx, 15);
	            this.state = 130;
	            this.match(CMakeParser.T__14);
	            this.state = 131;
	            this.match(CMakeParser.LParen);
	            this.state = 133; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            do {
	                this.state = 132;
	                this.argument();
	                this.state = 135; 
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            } while((((_la) & ~0x1f) == 0 && ((1 << _la) & 68091904) !== 0));
	            this.state = 137;
	            this.match(CMakeParser.RParen);
	            break;
	        case 16:
	            localctx = new OtherCmdContext(this, localctx);
	            this.enterOuterAlt(localctx, 16);
	            this.state = 139;
	            this.match(CMakeParser.ID);
	            this.state = 140;
	            this.match(CMakeParser.LParen);
	            this.state = 144;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while((((_la) & ~0x1f) == 0 && ((1 << _la) & 68091904) !== 0)) {
	                this.state = 141;
	                this.argument();
	                this.state = 146;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 147;
	            this.match(CMakeParser.RParen);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	argument() {
	    let localctx = new ArgumentContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, CMakeParser.RULE_argument);
	    var _la = 0; // Token type
	    try {
	        this.state = 162;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 18:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 150;
	            this.match(CMakeParser.QuotedArgument);
	            break;
	        case 17:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 151;
	            this.match(CMakeParser.BracketArgument);
	            break;
	        case 19:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 152;
	            this.match(CMakeParser.UnquotedArgument);
	            break;
	        case 16:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 153;
	            this.match(CMakeParser.ID);
	            break;
	        case 26:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 154;
	            this.match(CMakeParser.LParen);
	            this.state = 158;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while((((_la) & ~0x1f) == 0 && ((1 << _la) & 68091904) !== 0)) {
	                this.state = 155;
	                this.argument();
	                this.state = 160;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 161;
	            this.match(CMakeParser.RParen);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


}

CMakeParser.EOF = antlr4.Token.EOF;
CMakeParser.T__0 = 1;
CMakeParser.T__1 = 2;
CMakeParser.T__2 = 3;
CMakeParser.T__3 = 4;
CMakeParser.T__4 = 5;
CMakeParser.T__5 = 6;
CMakeParser.T__6 = 7;
CMakeParser.T__7 = 8;
CMakeParser.T__8 = 9;
CMakeParser.T__9 = 10;
CMakeParser.T__10 = 11;
CMakeParser.T__11 = 12;
CMakeParser.T__12 = 13;
CMakeParser.T__13 = 14;
CMakeParser.T__14 = 15;
CMakeParser.ID = 16;
CMakeParser.BracketArgument = 17;
CMakeParser.QuotedArgument = 18;
CMakeParser.UnquotedArgument = 19;
CMakeParser.BracketComment = 20;
CMakeParser.LineComment = 21;
CMakeParser.IgnoreNLBetweenArgs = 22;
CMakeParser.IgnoreExtraNLBetweenCmds = 23;
CMakeParser.NL = 24;
CMakeParser.WS = 25;
CMakeParser.LParen = 26;
CMakeParser.RParen = 27;
CMakeParser.Escape = 28;

CMakeParser.RULE_file = 0;
CMakeParser.RULE_command = 1;
CMakeParser.RULE_argument = 2;

class FileContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = CMakeParser.RULE_file;
    }

	EOF() {
	    return this.getToken(CMakeParser.EOF, 0);
	};

	command = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(CommandContext);
	    } else {
	        return this.getTypedRuleContext(CommandContext,i);
	    }
	};

	NL = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(CMakeParser.NL);
	    } else {
	        return this.getToken(CMakeParser.NL, i);
	    }
	};


	enterRule(listener) {
	    if(listener instanceof CMakeListener ) {
	        listener.enterFile(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof CMakeListener ) {
	        listener.exitFile(this);
		}
	}


}



class CommandContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = CMakeParser.RULE_command;
    }


	 
		copyFrom(ctx) {
			super.copyFrom(ctx);
		}

}


class OtherCmdContext extends CommandContext {

    constructor(parser, ctx) {
        super(parser);
        super.copyFrom(ctx);
    }

	ID() {
	    return this.getToken(CMakeParser.ID, 0);
	};

	LParen() {
	    return this.getToken(CMakeParser.LParen, 0);
	};

	RParen() {
	    return this.getToken(CMakeParser.RParen, 0);
	};

	argument = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(ArgumentContext);
	    } else {
	        return this.getTypedRuleContext(ArgumentContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof CMakeListener ) {
	        listener.enterOtherCmd(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof CMakeListener ) {
	        listener.exitOtherCmd(this);
		}
	}


}

CMakeParser.OtherCmdContext = OtherCmdContext;

class FunctionCmdContext extends CommandContext {

    constructor(parser, ctx) {
        super(parser);
        super.copyFrom(ctx);
    }

	LParen() {
	    return this.getToken(CMakeParser.LParen, 0);
	};

	RParen() {
	    return this.getToken(CMakeParser.RParen, 0);
	};

	argument = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(ArgumentContext);
	    } else {
	        return this.getTypedRuleContext(ArgumentContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof CMakeListener ) {
	        listener.enterFunctionCmd(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof CMakeListener ) {
	        listener.exitFunctionCmd(this);
		}
	}


}

CMakeParser.FunctionCmdContext = FunctionCmdContext;

class EndMacroCmdContext extends CommandContext {

    constructor(parser, ctx) {
        super(parser);
        super.copyFrom(ctx);
    }

	LParen() {
	    return this.getToken(CMakeParser.LParen, 0);
	};

	RParen() {
	    return this.getToken(CMakeParser.RParen, 0);
	};

	argument = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(ArgumentContext);
	    } else {
	        return this.getTypedRuleContext(ArgumentContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof CMakeListener ) {
	        listener.enterEndMacroCmd(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof CMakeListener ) {
	        listener.exitEndMacroCmd(this);
		}
	}


}

CMakeParser.EndMacroCmdContext = EndMacroCmdContext;

class IfCmdContext extends CommandContext {

    constructor(parser, ctx) {
        super(parser);
        super.copyFrom(ctx);
    }

	LParen() {
	    return this.getToken(CMakeParser.LParen, 0);
	};

	RParen() {
	    return this.getToken(CMakeParser.RParen, 0);
	};

	argument = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(ArgumentContext);
	    } else {
	        return this.getTypedRuleContext(ArgumentContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof CMakeListener ) {
	        listener.enterIfCmd(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof CMakeListener ) {
	        listener.exitIfCmd(this);
		}
	}


}

CMakeParser.IfCmdContext = IfCmdContext;

class EndForeachCmdContext extends CommandContext {

    constructor(parser, ctx) {
        super(parser);
        super.copyFrom(ctx);
    }

	LParen() {
	    return this.getToken(CMakeParser.LParen, 0);
	};

	RParen() {
	    return this.getToken(CMakeParser.RParen, 0);
	};

	argument = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(ArgumentContext);
	    } else {
	        return this.getTypedRuleContext(ArgumentContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof CMakeListener ) {
	        listener.enterEndForeachCmd(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof CMakeListener ) {
	        listener.exitEndForeachCmd(this);
		}
	}


}

CMakeParser.EndForeachCmdContext = EndForeachCmdContext;

class EndWhileCmdContext extends CommandContext {

    constructor(parser, ctx) {
        super(parser);
        super.copyFrom(ctx);
    }

	LParen() {
	    return this.getToken(CMakeParser.LParen, 0);
	};

	RParen() {
	    return this.getToken(CMakeParser.RParen, 0);
	};

	argument = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(ArgumentContext);
	    } else {
	        return this.getTypedRuleContext(ArgumentContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof CMakeListener ) {
	        listener.enterEndWhileCmd(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof CMakeListener ) {
	        listener.exitEndWhileCmd(this);
		}
	}


}

CMakeParser.EndWhileCmdContext = EndWhileCmdContext;

class BreakCmdContext extends CommandContext {

    constructor(parser, ctx) {
        super(parser);
        super.copyFrom(ctx);
    }

	LParen() {
	    return this.getToken(CMakeParser.LParen, 0);
	};

	RParen() {
	    return this.getToken(CMakeParser.RParen, 0);
	};

	enterRule(listener) {
	    if(listener instanceof CMakeListener ) {
	        listener.enterBreakCmd(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof CMakeListener ) {
	        listener.exitBreakCmd(this);
		}
	}


}

CMakeParser.BreakCmdContext = BreakCmdContext;

class MacroCmdContext extends CommandContext {

    constructor(parser, ctx) {
        super(parser);
        super.copyFrom(ctx);
    }

	LParen() {
	    return this.getToken(CMakeParser.LParen, 0);
	};

	RParen() {
	    return this.getToken(CMakeParser.RParen, 0);
	};

	argument = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(ArgumentContext);
	    } else {
	        return this.getTypedRuleContext(ArgumentContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof CMakeListener ) {
	        listener.enterMacroCmd(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof CMakeListener ) {
	        listener.exitMacroCmd(this);
		}
	}


}

CMakeParser.MacroCmdContext = MacroCmdContext;

class ElseIfCmdContext extends CommandContext {

    constructor(parser, ctx) {
        super(parser);
        super.copyFrom(ctx);
    }

	LParen() {
	    return this.getToken(CMakeParser.LParen, 0);
	};

	RParen() {
	    return this.getToken(CMakeParser.RParen, 0);
	};

	argument = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(ArgumentContext);
	    } else {
	        return this.getTypedRuleContext(ArgumentContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof CMakeListener ) {
	        listener.enterElseIfCmd(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof CMakeListener ) {
	        listener.exitElseIfCmd(this);
		}
	}


}

CMakeParser.ElseIfCmdContext = ElseIfCmdContext;

class EndIfCmdContext extends CommandContext {

    constructor(parser, ctx) {
        super(parser);
        super.copyFrom(ctx);
    }

	LParen() {
	    return this.getToken(CMakeParser.LParen, 0);
	};

	RParen() {
	    return this.getToken(CMakeParser.RParen, 0);
	};

	argument = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(ArgumentContext);
	    } else {
	        return this.getTypedRuleContext(ArgumentContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof CMakeListener ) {
	        listener.enterEndIfCmd(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof CMakeListener ) {
	        listener.exitEndIfCmd(this);
		}
	}


}

CMakeParser.EndIfCmdContext = EndIfCmdContext;

class ForeachCmdContext extends CommandContext {

    constructor(parser, ctx) {
        super(parser);
        super.copyFrom(ctx);
    }

	LParen() {
	    return this.getToken(CMakeParser.LParen, 0);
	};

	RParen() {
	    return this.getToken(CMakeParser.RParen, 0);
	};

	argument = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(ArgumentContext);
	    } else {
	        return this.getTypedRuleContext(ArgumentContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof CMakeListener ) {
	        listener.enterForeachCmd(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof CMakeListener ) {
	        listener.exitForeachCmd(this);
		}
	}


}

CMakeParser.ForeachCmdContext = ForeachCmdContext;

class WhileCmdContext extends CommandContext {

    constructor(parser, ctx) {
        super(parser);
        super.copyFrom(ctx);
    }

	LParen() {
	    return this.getToken(CMakeParser.LParen, 0);
	};

	RParen() {
	    return this.getToken(CMakeParser.RParen, 0);
	};

	argument = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(ArgumentContext);
	    } else {
	        return this.getTypedRuleContext(ArgumentContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof CMakeListener ) {
	        listener.enterWhileCmd(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof CMakeListener ) {
	        listener.exitWhileCmd(this);
		}
	}


}

CMakeParser.WhileCmdContext = WhileCmdContext;

class ContinueCmdContext extends CommandContext {

    constructor(parser, ctx) {
        super(parser);
        super.copyFrom(ctx);
    }

	LParen() {
	    return this.getToken(CMakeParser.LParen, 0);
	};

	RParen() {
	    return this.getToken(CMakeParser.RParen, 0);
	};

	enterRule(listener) {
	    if(listener instanceof CMakeListener ) {
	        listener.enterContinueCmd(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof CMakeListener ) {
	        listener.exitContinueCmd(this);
		}
	}


}

CMakeParser.ContinueCmdContext = ContinueCmdContext;

class EndFunctionCmdContext extends CommandContext {

    constructor(parser, ctx) {
        super(parser);
        super.copyFrom(ctx);
    }

	LParen() {
	    return this.getToken(CMakeParser.LParen, 0);
	};

	RParen() {
	    return this.getToken(CMakeParser.RParen, 0);
	};

	argument = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(ArgumentContext);
	    } else {
	        return this.getTypedRuleContext(ArgumentContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof CMakeListener ) {
	        listener.enterEndFunctionCmd(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof CMakeListener ) {
	        listener.exitEndFunctionCmd(this);
		}
	}


}

CMakeParser.EndFunctionCmdContext = EndFunctionCmdContext;

class ElseCmdContext extends CommandContext {

    constructor(parser, ctx) {
        super(parser);
        super.copyFrom(ctx);
    }

	LParen() {
	    return this.getToken(CMakeParser.LParen, 0);
	};

	RParen() {
	    return this.getToken(CMakeParser.RParen, 0);
	};

	argument = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(ArgumentContext);
	    } else {
	        return this.getTypedRuleContext(ArgumentContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof CMakeListener ) {
	        listener.enterElseCmd(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof CMakeListener ) {
	        listener.exitElseCmd(this);
		}
	}


}

CMakeParser.ElseCmdContext = ElseCmdContext;

class SetCmdContext extends CommandContext {

    constructor(parser, ctx) {
        super(parser);
        super.copyFrom(ctx);
    }

	LParen() {
	    return this.getToken(CMakeParser.LParen, 0);
	};

	RParen() {
	    return this.getToken(CMakeParser.RParen, 0);
	};
